--- a/HYNewNest/Features(主代码)/HomeComponent/Controller/CNHomeVC.xib
+++ b/HYNewNest/Features(主代码)/HomeComponent/Controller/CNHomeVC.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19162" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="ipad12_9" orientation="portrait" layout="fullscreen" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19144"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -27,14 +27,14 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="2099"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="1754"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gTY-no-Ada">
-                    <rect key="frame" x="0.0" y="0.0" width="414" height="2099"/>
+                    <rect key="frame" x="0.0" y="20" width="414" height="1734"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0FR-uQ-Sdz">
-                            <rect key="frame" x="0.0" y="0.0" width="414" height="2107"/>
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="1762"/>
                             <subviews>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zyr-R6-wLq" userLabel="BannerView">
                                     <rect key="frame" x="15" y="10" width="384" height="115"/>
@@ -81,9 +81,9 @@
                                     </constraints>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Me2-l2-ko6">
-                                    <rect key="frame" x="0.0" y="1407" width="414" height="700"/>
+                                    <rect key="frame" x="0.0" y="1407" width="414" height="355"/>
                                     <subviews>
-                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AS3-QX-It4">
+                                        <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AS3-QX-It4">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="345"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="币游牌照" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v9Y-92-puz">
@@ -127,7 +127,7 @@
                                             </constraints>
                                         </view>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ofr-bx-n6A">
-                                            <rect key="frame" x="0.0" y="345" width="414" height="250"/>
+                                            <rect key="frame" x="0.0" y="15" width="414" height="250"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="数字货币合作方" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZKb-AV-rpH">
                                                     <rect key="frame" x="157" y="34" width="100" height="17"/>
@@ -325,7 +325,7 @@
                                             </constraints>
                                         </view>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="s0T-uq-RmG">
-                                            <rect key="frame" x="0.0" y="595" width="414" height="105"/>
+                                            <rect key="frame" x="0.0" y="265" width="414" height="90"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="COPYRIGHT © 2028 币游国际. ALL RIGHTS RESERVED." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aMj-2X-iyH">
                                                     <rect key="frame" x="60" y="24" width="294" height="13.5"/>
@@ -357,14 +357,19 @@
                                         <constraint firstAttribute="trailing" secondItem="ofr-bx-n6A" secondAttribute="trailing" id="5iU-Xv-dWp"/>
                                         <constraint firstAttribute="bottom" secondItem="s0T-uq-RmG" secondAttribute="bottom" id="7yS-sH-5W5"/>
                                         <constraint firstItem="ofr-bx-n6A" firstAttribute="top" secondItem="AS3-QX-It4" secondAttribute="bottom" id="8di-wV-WGe"/>
-                                        <constraint firstItem="ofr-bx-n6A" firstAttribute="height" secondItem="Me2-l2-ko6" secondAttribute="height" multiplier="250:700" id="B09-aS-gOn"/>
+                                        <constraint firstItem="ofr-bx-n6A" firstAttribute="height" secondItem="Me2-l2-ko6" secondAttribute="height" multiplier="250:355" id="B09-aS-gOn"/>
                                         <constraint firstAttribute="trailing" secondItem="s0T-uq-RmG" secondAttribute="trailing" id="GxW-tF-sdT"/>
                                         <constraint firstItem="AS3-QX-It4" firstAttribute="leading" secondItem="Me2-l2-ko6" secondAttribute="leading" id="g1r-5k-DVj"/>
-                                        <constraint firstItem="s0T-uq-RmG" firstAttribute="height" secondItem="Me2-l2-ko6" secondAttribute="height" multiplier="90:600" id="hLq-zd-fbz"/>
-                                        <constraint firstAttribute="height" constant="700" id="piz-XV-bof"/>
+                                        <constraint firstItem="s0T-uq-RmG" firstAttribute="height" secondItem="Me2-l2-ko6" secondAttribute="height" multiplier="90:355" id="hLq-zd-fbz"/>
+                                        <constraint firstAttribute="height" constant="355" id="piz-XV-bof"/>
                                         <constraint firstItem="s0T-uq-RmG" firstAttribute="top" secondItem="ofr-bx-n6A" secondAttribute="bottom" id="tHw-ya-IU8"/>
                                         <constraint firstItem="ofr-bx-n6A" firstAttribute="leading" secondItem="Me2-l2-ko6" secondAttribute="leading" id="zsU-t8-mNj"/>
                                     </constraints>
+                                    <variation key="default">
+                                        <mask key="subviews">
+                                            <exclude reference="AS3-QX-It4"/>
+                                        </mask>
+                                    </variation>
                                 </view>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4tY-xW-Ug1">
                                     <rect key="frame" x="0.0" y="807" width="414" height="600"/>
